--- a/04_Transforms.Rmd
+++ b/04_Transforms.Rmd
@@ -31,21 +31,26 @@ Los parámetros $a_i$ se estiman mediante mínimos cuadrados ordinarios, es deci
 
 ## Diferencias de Box-Jenkins
 
-Consiste en aplicar diferencias a la serie de tiempo estudiada hasta que las observaciones se perciban como componentes de una serie débilmente estacionaria. Se debe comprender los siguientes operadores para el método: 
+Consiste en aplicar diferencias a la serie de tiempo estudiada hasta que las observaciones se perciban como componentes de una serie débilmente estacionaria. Se definen los siguientes operadores para este método: 
 
-El **operador de retraso** se denota con una letra $B$ o $\mathcal{L}$ y se define como el valor retrasado de una serie de tiempo temporal indicado por el exponente del operador. De manera particular se tiene $BX_t = X_{t-1}$, por lo que si se aplica varias veces el operador, la serie se retardaría $k$-unidades temporales:
+El **operador de retraso** se denota con una letra $B$ o $\mathcal{L}$ y se define como el valor retrasado de una serie de tiempo temporal, indicado con el exponente del operador la cantidad de retrasos. De manera particular se tiene $BX_t = X_{t-1}$, por lo que si se aplica varias veces el operador, la serie se retardaría $k$-unidades temporales:
 
 $$
 B^kX_t=X_{t-k}
 $$
 
-En particular $B^0X_t=X_t$. Se puede utilizar con notación polinómica:
+En particular $B^0X_t=X_t$. Por lo que se podría utilizar notación polinómica para expresar el operador de retraso:
 
 $$
 \phi(B)X_t = \left(\phi_0+\phi_1B+\phi_2B^2\right)X_t = \phi_0X_t+\phi_1X_{t-1}+\phi_2X_{t-2} 
 $$
 
-El **operador diferencia** se expresa con $\nabla$ y se define como la diferencia entre el valor al periodo $t$ y valor rezagado $k$ periodos $\nabla X_t=X_t-X_{t-1}$.
+El **operador diferencia** se expresa con $\nabla$ y se define como la diferencia entre el valor al periodo $t$ y valor rezagado $k$ periodos. Para $k=1$ se define como $\nabla X_t=X_t-X_{t-1}$. Para $k=2$ se tendría la diferencia de las diferencias de un rezago.
+
+$$
+\nabla^2X_t=\nabla X_t-\nabla X_{t-1}=(X_t-X_{t-1})-(X_{t-1}-X_{t-2})
+$$ 
+Y asi sucesivamente según vaya aumentando el valor de $k$.
 
 Ambos operadores se relacionan de la siguiente manera: 
 
@@ -79,4 +84,8 @@ d) Muestra visualmente la autocorrelación y la autocorrelación parcial de amba
 
 e) Con al función `forecast::ma())` puedes suavizar la serie de tiempo con el método de medias móviles. Realiza el análisis que necesites y concluye si tiene un gran impacto a favor el suavizar la serie de tiempo original. ¿Es mejor suavizar que al utilizar la diferencia entre las observaciones?
 
-+ Recomendaciones: Utiliza la función `autoplot()` del paquete `forecast` en objetos de series de tiempo y el resultado de la función `decompose()` como si fuera la función `plot()`. Obtendrás un objeto ggplot que tendrá mayor versatilidad para su edición. Además, te recomendamos utilizar las funciones `ggAcf()` y `ggPacf()` del mismo paquete para el análisis de autocorrelación. 
++ Recomendaciones: Utiliza la función `autoplot()` del paquete `forecast` en objetos de series de tiempo y el resultado de la función `decompose()` como si fuera la función `plot()`. Obtendrás un objeto ggplot que tendrá mayor versatilidad para su edición. Además, te recomendamos utilizar las funciones `ggAcf()` y `ggPacf()` del mismo paquete para el análisis de autocorrelación.
+
+3. Con los datos seleccionados para las prácticas 
+c. Aplique la función decompose a los datos y describa los hallazgos. ¿Qué puede concluir además de los hallazgos técnicos?
+d. Grafique la serie de los logaritmos de los datos y describa el cambio observado respecto a lo visto en el inciso b) de la práctica 1 ¿El gráfico sugiere que un modelo estacionario podría ser apropiado para los logaritmos?
