--- a/12_ARCH.Rmd
+++ b/12_ARCH.Rmd
@@ -10,7 +10,7 @@ Existen diferentes tipos de modelos no lineales, entre ellos los más
 populares son los ARCH y GARCH para predecir la volatilidad.
 
 # $ARCH(q)$: Proceso Autoregresivo con Heterocedasticidad Condicional
-El nombre proviene del inglés, "Autoregressive conditional heteroscedasticity" (ARCH). Métodp propuesto por Engels en 1982, que determina un patrón de comportamiento estadístico para la varianza. Considera que la información pasada de una variable y su volatilidad son factores que explican su comportamiento presente y, por tanto, podrá ser extrapolado a futuro.
+El nombre proviene del inglés, "Autoregressive conditional heteroscedasticity" (ARCH). Método propuesto por Engels en 1982, que determina un patrón de comportamiento estadístico para la varianza. Considera que la información pasada de una variable y su volatilidad son factores que explican su comportamiento presente y, por tanto, podrá ser extrapolado a futuro.
 
 La expresión algebráica básica del proceso $ARCH(r)$ es:
 
@@ -50,10 +50,9 @@ $$
 \sigma^2_{t} = \alpha_0+\alpha_1 X^2_{t-1}
 $$
 Observemos que la varianza condicional ($\sigma^2_t$) tiene una estructura similar a un AR(1), y por tanto solo depende del último valor observado. Por tanto, si el valor de $X^2_t$ es alto, la varianza $\sigma^2_t$ de la siguiente observación condicionada a este valor será también alta. Esto producirá correlación entre los cuadrados de la serie, provocando rachas de valores de magnitud
-relativamente elevada o con mayor varianza. Pero como la media marginal y la condicionada vale cero, aunque la varianza condicionada sea alta, siempre es posible que aparezca un valor pequeño de $X^2_t$, que disminuirá la varianza condicionada de la
-observación siguiente y facilitará que la siguiente observación sea pequeña en valor absoluto. De manera que la serie puede presentar rachas de valores altos, pero globalmente será estacionaria. 
+relativamente elevada o con mayor varianza. Pero como la media marginal y la media condicionada valen cero, aunque la varianza condicionada sea alta, siempre es posible que aparezca un valor pequeño de $X^2_t$, que disminuirá la varianza condicionada de la observación siguiente y facilitará que la siguiente observación sea pequeña en valor absoluto. De manera que la serie puede presentar rachas de valores altos, pero globalmente será estacionaria. 
 
-El modelo anterior puede generalizarse permitiendo una dependencia de la varianza condicional con q retardos. De manera que el modelo será $ARCH(q)$, el cual se define como:
+El modelo anterior puede generalizarse permitiendo una dependencia de la varianza condicional con $q$ retardos. De manera que el modelo será $ARCH(q)$, el cual se define como:
 
 Un proceso estacionario $X_t$ sigue un modelo $ARCH(q)$ si y sólo si
 $$
